--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
     </button>
   </div>
   <div id="missions"></div>
+
+  <div>
+    <button onclick="buildTimer()">
+      Air Drop 
+    </button>
+  </div>
+  <div class="timer">
+
+  </div>
+  <div class="checkDrop">
+
+  </div>
   <footer>
     <p class="ml-2"><small class="text-muted"><a href='https://docs.google.com/document/d/1a314ZQM1f4ggFCtsC__Nb3B_1Hrc02cS0ZhY7_T08v8/'>Game Guide/FAQ</a> | <a href='https://zephyron1237.github.io/adcom-capsule-tracker/'>Free Capsule Tracker</a> | Mission Tracker | <a href='#' onclick='window.location.reload(true)'>Force Reload</a><br />
     Made by Zephyron1237. Source on <a href='https://github.com/zephyron1237/adcom-mission-tracker'>GitHub</a>. Version 6 "Hands-free"</small></p>
@@ -102,4 +114,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="data.js"></script>
 <script src="missions.js"></script>
+<script src="timer.js"></script>
 </html>
